Fix scrollbar appearing at all times in some browsers

--- a/src/ui.css
+++ b/src/ui.css
@@ -33,7 +33,7 @@
 .drawer {
 	background: var(--drawer-background);
 	border: var(--drawer-border);
-	overflow: scroll;
+	overflow: auto;
 }
 
 .button {
